--- a/TEST.html
+++ b/TEST.html
@@ -1,2 +1,13 @@
-<h1>MY FIRST WEBSITE</h1>
-<p> my fav color is red</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<h1>MY FIRST WEBSITE</h1>
+	<title>MHALA</title>
+</head>
+<body>
+	<p> my fav color is red</p>
+
+</body>
+</html>
